<resources>
    <string name="app_name">PenguinPay</string>
    <string name="first_name_hint">Enter first name </string>
    <string name="last_name_hint">Enter last name </string>
    <string name="phone_number">Enter phone number </string>
    <string name="recipient_amount_hint">Recipient Amount</string>
    <string name="amount_hint">Amount in USD (Binary format 0,1)</string>
    <string name="exchange_rate_hint">Exchange rate</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="send">Send</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="recipient_exchange_rate">Exchange rate is not set yet , please select a valid country</string>
    <string name="recipient_receiving_amount">Recipient will receive </string>
    <string name="recipient_receiving_amount_value">00000000</string>
    <string name="accept">Accept</string>
    <string name="send_alert">Are you sure you want to send this amount?</string>
    <string name="send_money_notification">Money is being Sent Now</string>
    <string name="send_money_error">Please, fill all fields</string>
    <string name="general_error">Something went Wrong</string>
    <string name="exchange_rate_info">Exchange Rate is</string>
</resources>
