<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/two_grid_unit"
        tools:context=".feature.transaction.TransactionActivity">

        <!-- first name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two_grid_unit"
            android:hint="@string/first_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameFiled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:lines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textColor="@color/primaryColor"
                android:textColorHint="@color/primaryColor" />

        </com.google.android.material.textfield.TextInputLayout>
       <!-- last name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two_grid_unit"
            android:hint="@string/last_name_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstNameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameFiled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:lines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:textColor="@color/primaryColor"
                android:textColorHint="@color/primaryColor" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- phone number -->
        <LinearLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/two_grid_unit"
            app:layout_constraintTop_toBottomOf="@id/lastNameInputLayout"
            android:gravity="center_vertical">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccpLoadFullNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_hintExampleNumber="true"
                app:ccp_defaultNameCode="US"
                app:ccp_autoFormatNumber="false"
                app:ccp_countryPreference="KE,TZ,NG,UG" />

            <EditText
                android:id="@+id/editTextLoadCarrierNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:singleLine="true"
                android:autofillHints="@string/phone_number"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/exchangeRateTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout"
            android:text="@string/recipient_exchange_rate"
            android:layout_margin="@dimen/one_and_half_grid_unit"
            android:textColor="@color/primaryColor"
            />
        <!-- sending amount in binary -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two_grid_unit"
            android:hint="@string/amount_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exchangeRateTV"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountNameFiled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:lines="1"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:imeOptions="actionDone"
                android:textColor="@color/primaryColor"
                android:textColorHint="@color/primaryColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- receiving amount in binary -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/amountLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amountInputLayout"
            android:gravity="center"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/zeroBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/one_grid_unit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/oneBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:layout_marginLeft="@dimen/one_grid_unit"
                android:layout_marginStart="@dimen/one_grid_unit"
                android:text="@string/one"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/recipientAmountTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amountLayout"
            android:text="@string/recipient_receiving_amount"
            android:layout_margin="@dimen/one_and_half_grid_unit"
            android:textColor="@color/primaryColor"
            android:layout_marginTop="@dimen/twenty_grid_unit"
            android:textSize="@dimen/text_size_small_material"
            />

        <TextView
            android:id="@+id/recipientAmountValueTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipientAmountTV"
            android:text="@string/recipient_receiving_amount_value"
            android:layout_margin="@dimen/one_and_half_grid_unit"
            android:textColor="@color/primaryColor"
            android:layout_marginTop="@dimen/twenty_grid_unit"
            android:textSize="@dimen/text_size_headline_material"
            />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />



        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

